# FinSight

./: README.md  app.py  finance_crew.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.streamlit/: config.toml
